2009-07-09  John W. Eaton  <jwe@octave.org>

	* plot/axis.m: Return 4-element vector for 2-d view.
	From David Woodburn <david.woodburn@gmail.com>.

	* sparse/nonzeros.m: Always return a column vector.  New tests.

2009-06-25  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Apply feature 'wxt_has_size'.
	* plot/__gnuplot_has_feature__.m: Add feature 'wxt_has_size' for
	gnuplot >= 4.3.0.

2009-06-24  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_figure__.m: Modify the implicit margin when gnuplot's
	output is landscape.
	* plot/gnuplot_drawnow.m: Simplify handling of the figure's paper
	properties, and rely upon listeners for units conversion. Minor code
	improvements.
	* plot/print.m: Reimplement -landscape and -portrait to modify the
	properties papersize and paperposition. Produce compatible results
	when paperpositionmode=='auto'. Simplfy units conversion and
	restoration of initial figure properties.

2009-06-24  Marco Caliari  <marco.caliari@univr.it>

	* general/repmat.m: Call kron, not spkron.

2009-06-24  Alexander Mamonov  <mamonov@gmail.com>

	* plot/plot3.m: Correctly compute offsets for property/value pairs.

2009-06-23  Alexander Mamonov  <mamonov@gmail.com>

	* image/imread.m: New test.

2009-06-22  Ben Abbott <bpabbott@mac.com>

	* plot/grid.m: Add missing semi-colon. Allow grid to be toggled
	on/off for each axis independently. Gnuplot requires that minor
	ticks accompany minor ticks. Add demo.
	* plot/__go_draw_axes__.m: For {x,y,z}scale == 'log' use 10 minor
	ticks.

2009-06-22  John W. Eaton  <jwe@octave.org>

	* statistics/base/var.m: Return zero for scalar case.  Handle
	empty arguments in a Matlab compatible way.  New tests.

2009-06-19  Jaroslav Hajek  <highegg@gmail.com>

	* set/ismember.m: Properly handle NaNs. Fix test.

2009-06-18  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Change the default x11 fontspec from '*,0'
	to ',0' to avoid delays searching the fontpath for a font named '*'.
