@@ -1,3 +1,7 @@
+2009-07-15  Robert T. Short <octave@phaselockedsystems.com>
+
+	* polynomial/conv.m: Fix Matlab incompatibility.  New tests.
+
 2009-07-09  John W. Eaton  <jwe@octave.org>
 
 	* plot/axis.m: Return 4-element vector for 2-d view.
